--- a/style.css
+++ b/style.css
@@ -1,5 +1,30 @@
-header{
+*{
+    margin: 0;
+    padding: 0;
+
+}
+
+.cabecalho{
     background-color:rgb(0, 19, 0) ;
-    color: white;
+    color: rgb(180, 65, 65);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
 }
     
+.cabecalho-imagem{
+    width: 30%
+}
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
+    font-size: 24px;
+}
+.escola-imagem{
+    width: 25%;
+}
+.escola{
+    background-image:linear-gradient(#026c20,#5aff7e) ;
+    color: bisque;
+}
